--- a/Craveon/customer/template/menu.html
+++ b/Craveon/customer/template/menu.html
@@ -292,7 +292,7 @@
             return;
         }
 
-        fetch("/CraveOn/checkout", {
+        fetch("/checkout", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json"
