--- a/Craveon/static/css/customer/signup.css
+++ b/Craveon/static/css/customer/signup.css
@@ -19,17 +19,19 @@ body {
 
 /* Form Panel */
 .form-panel {
-    flex: 1;
+     flex: 1;
+    background: linear-gradient(#898989, #7bb491);
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2rem;
+    
+    padding: 2rem
 }
 
 .signup-form {
     width: 100%;
     max-width: 800px;
-    background: rgba(241, 237, 237, 0.2);
+    background: rgba(178, 177, 177, 0.2);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border-radius: 15px;
@@ -103,7 +105,7 @@ body {
 
 .signup-btn {
     width: 100%;
-    background: #01ff9e;
+    background: #4cd6a1;
     color: white;
     border: none;
     padding: 1rem;
@@ -182,6 +184,6 @@ body {
     .signup-form {
         backdrop-filter: none;
         -webkit-backdrop-filter: none;
-        background: rgba(255, 255, 255, 0.9);
+       
     }
 }
