--- a/Craveon/admin/template/base.html
+++ b/Craveon/admin/template/base.html
@@ -43,6 +43,11 @@
                     <i class="fas fa-users me-2"></i> Manage Users
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('admin.sales')}}">
+                    <i class="fas fa-chart-line me-2"></i> Sales
+                </a>
+            </li>
         </ul>
         <hr>
         <ul class="nav flex-column">
@@ -51,6 +56,7 @@
                     <i class="fas fa-sign-out-alt me-2"></i> Log Out
                 </a>
             </li>
+            
         </ul>
     </div>
     
